--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build -env=prod"
+    "postinstall": "ng build --prod"
   },
   "engines": {
     "node": "8.11.1",
