--- a/package.json
+++ b/package.json
@@ -45,8 +45,9 @@
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.0.0",
-    "zone.js": "^0.8.26",
-    "typescript": "~2.7.2"
+    "symbol-observable": "^1.2.0",
+    "typescript": "~2.7.2",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.0",
