--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "firebase": "^5.0.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.0",
+    "json-schema-traverse": "^0.4.0",
     "ngx-file-helpers": "^1.0.0-alpha.5",
     "ngx-gallery": "^5.3.2",
     "ngx-swiper-wrapper": "^6.0.0",
