--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.5.4",
     "express": "^4.16.3",
+    "fast-json-stable-stringify": "^2.0.0",
     "firebase": "^5.0.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.0",
