--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ajv": "^6.5.0",
     "angularfire2": "^5.0.0-rc.10",
     "bootstrap": "^4.0.0-beta",
+    "chokidar": "^2.0.3",
     "core-js": "^2.5.4",
     "express": "^4.16.3",
     "fast-json-stable-stringify": "^2.0.0",
