--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.0.0",
     "typescript": "~2.7.2",
+    "uri-js": "^4.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
