--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "@ng-select/ng-select": "^2.0.3",
     "@nicky-lenaers/ngx-scroll-to": "^0.6.1",
+    "ajv": "^6.5.0",
     "angularfire2": "^5.0.0-rc.10",
     "bootstrap": "^4.0.0-beta",
     "chart.js": "^2.7.2",
