--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.0.0",
+    "symbol-observable": "^1.2.0",
     "typescript": "~2.7.2",
     "zone.js": "^0.8.26"
   },
