--- a/angular.json
+++ b/angular.json
@@ -37,24 +37,7 @@
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "src/js/material.min.js",
               "src/js/theme-plugins.js",
-              "src/js/main.js",
-              // "src/js/moment.min.js",
-              // "src/js/ajax-pagination.js",
-              // "src/js/Chart.min.js",
-              // "src/js/chartjs-plugin-deferred.min.js",
-              // "src/js/circle-progress.min.js",
-              // "src/js/fullcalendar.js",
-              // "src/js/isotope.pkgd.min.js",
-              // "src/js/jquery.gifplayer.js",
-              // "src/js/jquery.magnific-popup.min.js",
-              // "src/js/run-chart.js",
-              // "src/js/selectize.min.js",
-              // "src/js/simplecalendar.js",
-              // "src/js/smooth-scroll.min.js",
-              // "src/js/swiper.jquery.min.js",
-              // "src/js/daterangepicker.min.js",
-              // "src/js/tether.min.js",
-              // "src/js/webfontloader.min.js"
+              "src/js/main.js"
             ]
           },
           "configurations": {
