--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "firebase": "^5.0.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.0",
+    "ng-emoji-picker": "^6.0.0",
     "ngx-file-helpers": "^1.0.0-alpha.5",
     "ngx-gallery": "^5.3.2",
+    "ngx-perfect-scrollbar": "^6.2.0",
     "ngx-swiper-wrapper": "^6.0.0",
     "path": "^0.12.7",
     "popper.js": "^1.14.3",
